--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css
@@ -187,7 +187,7 @@ padding: 0 .5em;
     color: var(--black-color);
   }
 
-  .admin-dashboard .container .content .side-right .orders {
+  .admin-dashboard .container .content .side-right .cancelled_orders {
     background-color: var(--white-color);
     color: var(--black-color);
   }
