--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/navbar.css
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/navbar.css
@@ -11,7 +11,7 @@
     left: 0;
     right: 0;
     width: 100%;
-    z-index: 1000; /* Ensure the navbar appears above other content */
+    z-index: 1000; 
 }
   
   
@@ -93,9 +93,7 @@
       display: flex;
     }
   
-    .cart-mobile {
-      position: relative;
-    }
+  
   }
   
   
