--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +11,11 @@
         </title>
 </head>
 <body>
-    
+    <div class="admin-dashboard">
+        {% include 'admin-portal/navbar.html' %}
     {% block content %}
         
     {% endblock content %}
-        
+    </div>
 </body>
 </html>
