new file:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/__init__.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/admin.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/apps.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/models.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/migrations/__pycache__/__init__.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/urls.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/settings.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/ecommerce_website/urls.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/admin_portal.css 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/navbar.css

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
@@ -9,6 +9,8 @@
         
     {% endblock title %}
         </title>
+    <link rel="stylesheet" href="{% static 'css/admin_portal/admin_portal.css' %}">
+    <link rel="stylesheet" href="{% static 'css/admin_portal/navbar.css' %}">
 </head>
 <body>
     <div class="admin-dashboard">
