--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="admin-dashboard">
-        {% include 'admin-portal/navbar.html' %}
+        {% include 'admin_portal/navbar.html' %}
     {% block content %}
         
     {% endblock content %}
