--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -4,7 +4,7 @@
             <div class="navbar-mobile">
                 <a href="{% url 'home' %}" class="logo">Bells</a>
                 {% if user.is_authenticated and user.is_staff %}
-                <a href="{% url 'admin_dashboard' %}">Dashboard</a>
+                <a href="{% url 'admin_portal' %}">Dashboard</a>
                 {% endif %}
                 <li class="dropdown hide">
                         {% if user.is_authenticated %}
