--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -19,7 +19,13 @@
             <tr>
                 <th>Items: <strong>{{ total_quantity }}</strong></th>
                 <th>Total: <strong>$ {{ order_total }}</strong></th>
+                
+                {% if user_authenticated %}
                 <th class="checkout"><a href="{% url 'checkout' %}"><button type="button">Checkout</button></a></th>
+                {% else %}
+                <th class="checkout"><a href="{% url 'login' %}"><button type="button">Checkout</button></a></th>
+                {% endif %}
+                    
             </tr>
         </thead>
         {% endif %}
