modified:   15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3

--- a/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/cart/templates/cart/cart.html
@@ -20,7 +20,7 @@
                 <th>Items: <strong>{{ total_quantity }}</strong></th>
                 <th>Total: <strong>$ {{ order_total }}</strong></th>
                 
-                {% if user_authenticated %}
+                {% if user.is_authenticated %}
                 <th class="checkout"><a href="{% url 'checkout' %}"><button type="button">Checkout</button></a></th>
                 {% else %}
                 <th class="checkout"><a href="{% url 'login' %}"><button type="button">Checkout</button></a></th>
