modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/footer.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/navbar.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/navbar.html
@@ -12,7 +12,7 @@
         </div>
         <div class="navbar-links" id="navbar-links">
             <ul>
-                <li><a href="{% url 'home' %}">Store</a></li>
+                <li><a href="{% url 'admin_portal' %}">Dashboard</a></li>
                 <li><a href="#">Orders</a></li>
                 <li><a href="#">Inventory</a></li>
                 <li><a href="#">Customers</a></li>
