--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html
@@ -172,14 +172,7 @@
         </div>
     </div>
 
-    <div class="footer">
-        <span><i class="fa-brands fa-facebook"></i></span>
-        <span><i class="fa-brands fa-x-twitter"></i></span>
-        <span><i class="fa-brands fa-instagram"></i></span>
-        <span><i class="fa-brands fa-tiktok"></i></span>
-        <span><i class="fa-brands fa-whatsapp"></i></span>
-        <span><i class="fa-brands fa-youtube"></i></span>
-    </div>
+    {% include 'admin_portal/footer.html' %}
 
 </div>
 
