modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
@@ -36,21 +36,26 @@
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg></a>
                 </div>
                 <div class="lead">
-                    <h5>All Orders</h5>
-                </div>
-                <div class="lead">
-                    <h5>New Orders</h5>
-                </div>
-                <div class="lead">
-                    <h5>New Customers</h5>
-                </div>
-                <div class="lead">
                     <h5>All Products</h5>
+                </div>
+                <div class="lead">
+                    <h5>New Products</h5>
+                </div>
+                <div class="lead">
+                    <h5>Out of Stock</h5>
+                </div>
+                <div class="lead">
+                    <h5>Listed Products</h5>
                 </div>
             </div>
 
 
         <section>
+            <div class="product_form">
+                <form action="" method="POST">
+                    
+                </form>
+            </div>
 
         </section>
 
