modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
@@ -86,10 +86,10 @@
                     <input type="number" id="stock_quantity" name="stock_quantity" value="1"><br>
                     
                     <label for="discount">Discount:</label><br>
-                    <input type="text" id="discount" name="discount"><br>
+                    <input type="text" id="discount" name="discount" readonly><br>
                     
                     <label for="percentage_discount">Percentage Discount:</label><br>
-                    <input type="number" id="percentage_discount" name="percentage_discount"><br>
+                    <input type="number" id="percentage_discount" name="percentage_discount" readonly><br>
                     
                     <label for="is_new">New Product:</label>
                     <input type="checkbox" id="is_new" name="is_new"><br>
