modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/admin_portal.html
@@ -48,6 +48,7 @@
                 </div>
                 <div class="lead">
                     <h5>All Products</h5>
+                    <p>{{ products | length }}</p>
                 </div>
             </div>
             <section>
