--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
@@ -41,6 +41,8 @@
                 </div>
                 <div class="lead">
                     <h5>New Products</h5>
+                    <p>{{ new_products | length }}</p>
+                   
                 </div>
                 <div class="lead">
                     <h5>Out of Stock</h5>
