modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
@@ -37,15 +37,16 @@
                 </div>
                 <div class="lead">
                     <h5>All Products</h5>
-                    <p>{{ products | length }}</p>
+                    <p>{{ products_count }}</p>
                 </div>
                 <div class="lead">
                     <h5>New Products</h5>
-                    <p>{{ products.is_new | length }}</p>
+                    <p>{{ new_products_count}}</p>
                    
                 </div>
                 <div class="lead">
                     <h5>Out of Stock</h5>
+                    <p>{{ out_of_stck_count }}</p>
                 </div>
                 <div class="lead">
                     <h5>Listed Products</h5>
