modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -47,6 +47,9 @@
                             {% endif %}
                         </div>
                     </li>
+                    <li><a href="#"><form action="{% url 'search' %}" method="get">
+                        <input type="search" placeholder="Search Product">
+                    </form></a></li>
                 </ul>
             </div>
             <div class="cart">
