modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/search.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -48,7 +48,7 @@
                         </div>
                     </li>
                     <li><a href="#"><form action="{% url 'search' %}" method="get">
-                        <input type="search" placeholder="Search Product">
+                        <input type="search" placeholder="Search Product" name="query">
                     </form></a></li>
                 </ul>
             </div>
