--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/search.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/search.html
@@ -4,6 +4,9 @@
 {% block title %}
     search
 {% endblock title %}
+
+
+{% block content %}
 {% include 'store/include/hero.html' %}
 <section>
     <h3 class="section-title"><a href="{% url 'home' %}">Products</h3></a>
@@ -14,3 +17,5 @@
         {% endfor %}
     </div>
 </section>
+{% endblock content %}
+    
