modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/forms.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/forms.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/product_form.css 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/product_card.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/search.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
@@ -58,7 +58,7 @@
             <div class="product_form">
                 <form method="POST" action="" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    {{ form }}
                     <input type="submit" value="Submit">
                   </form>
                   
@@ -66,15 +66,11 @@
             </div>
 
         </section>
-
-        <section>
-
-        </section>
         </div>
 
     </div>
 
-    {% include 'admin_portal/footer.html' %}
+    
 
 </div>
 
