--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/search.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/search.html
@@ -2,20 +2,28 @@
 
 
 {% block title %}
-    search
+    Search for {{query}}
 {% endblock title %}
 
 
 {% block content %}
 {% include 'store/include/hero.html' %}
+
 <section>
-    <h3 class="section-title"><a href="{% url 'home' %}">Products</h3></a>
+    
+    {% if products %}
+    <h3 class="section-title">Search Result for {{ query }}</h3>
     <div class= "product-container">
         
         {% for product in products %}
         {% include 'store/include/product_card.html' %}
         {% endfor %}
     </div>
+    {% else %}
+    <h1 class="section-title">No result found for {{query}}. <a href="{% url 'home' %}">Check store.</a></h1> 
+    {% endif %}
+        
+    
 </section>
 {% endblock content %}
     
