--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
@@ -11,6 +11,7 @@
         </title>
     <link rel="stylesheet" href="{% static 'css/admin_portal/admin_portal.css' %}">
     <link rel="stylesheet" href="{% static 'css/admin_portal/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/admin_portal/product_form.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
