--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/product.html
@@ -49,24 +49,25 @@
             <p style="color: red;">
                 {% if stock_quantity >= 5 %}
                     We have {{ stock_quantity }} items available
-                {% else %}
+                {% elif stock_quantity >= 1 %}
                     Only {{ stock_quantity }} item{% if stock_quantity != 1 %}s{% endif %} left
+                {% else %}
+                    Item out of stock!!!
                 {% endif %}
             </p>
             
         </div>
+        
+        {% if product.in_stock %}
         <div class="quantity">
-            <!-- <input type="number" value="1" min="1"> -->
             <p>Quantity:  
             <span><input type="number" value="1" min="1" max="{{ stock_quantity }}"></span>
             </p>
-            <!-- <select id="qty-cart">
-                {% for quantity in quantity_list %}
-                    <option value="{{ quantity }}">{{ quantity }}</option>
-                {% endfor %}
-            </select> -->
             <button type="button" value="{{ product.id }}" id="add-cart" class="add-to-cart">Add to Cart</button>
         </div>
+        {% else %}
+        <button>Enquire availablility</button>
+        {% endif %}
     </div>
 </div>
 
