modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/views.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/navbar.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/urls.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/navbar.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="{% url 'admin_portal' %}">Dashboard</a></li>
                 <li><a href="#">Orders</a></li>
-                <li><a href="#">Inventory</a></li>
+                <li><a href="{% url 'inventory' %}">Inventory</a></li>
                 <li><a href="#">Customers</a></li>
                 <li><a href="#">Sales</a></li>
                 <li class="dropdown hide-on-mobile">
