modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/inventory.css

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/admin_portal/admin_portal.css' %}">
     <link rel="stylesheet" href="{% static 'css/admin_portal/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/admin_portal/product_form.css' %}">
+    <link rel="stylesheet" href="{% static 'css/admin_portal/inventory.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
