modified:   15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/inventory.css

--- a/15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/inventory.css
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/static/css/admin_portal/inventory.css
@@ -14,6 +14,12 @@
     border-bottom: 1px solid black;
 }
 
+.inventory table  th,
+.inventory table  td {
+    width: 20%;
+    padding: .5em;
+}
+
 .inventory table  th:first-of-type,
 .inventory table  td:first-of-type {
     width: 20%;
