modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/forms.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/forms.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/inventory.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/0005_product_is_listed.py 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/store/migrations/__pycache__/0005_product_is_listed.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/models.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/admin_portal/templates/admin_portal/add_product.html
@@ -56,7 +56,7 @@
 
         <section>
             <div class="product_form">
-                <form method="POST" action="" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form }}
                     <input type="submit" value="Submit">
